# emma

./: .gitignore  .hgignore  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  configure.in  dis_x86.c  dis_x86.h  disassem.c  disassem.h  emma.h  main.c  main.cpp  notes  parsefile.c  parsefile.h  utils.c  utils.h  vague-plan
refs/: nice_debug_layout  syscall_registers
src/: Makefile.am  Makefile.in  emma.cpp  emma.h  frida.h  main.cpp  options.cpp  options.h  parsefile.cpp  parsefile.h  read_elf.cpp  read_elf.h  read_file.cpp  read_file.h  readelf32.cpp  readelf32.h  utils.cpp  utils.h
test/: Makefile  asm_hello.s  asm_hello32.s  bit_counting.s  countinstr.c  environ.c  locale_commas.c  pokefunction.cpp  rscalc.c  sqrt.c  tracer1.c  tst32.asm  tst32.s  tstalarm.c
test/rdtsc/: Makefile  rdtsc.s
