## process with automake to create Makefile.in
##
AM_CXXFLAGS=-Wall -Wextra -Wundef
AM_CXXFLAGS+=-Werror
AM_CXXFLAGS+=-ggdb3
AM_CXXFLAGS+=-O0
#
AM_CFLAGS=-Wall -Wextra -Wundef
AM_CFLAGS+=-Werror
AM_CFLAGS+=-ggdb3
AM_CFLAGS+=-O0
#
bin_PROGRAMS=emma hello_world_c
#
emma_SOURCES=main.cpp readelf32.cpp utils.cpp options.cpp
#
hello_world_c_SOURCES=hello_world_c.c
