## process with automake to create Makefile.in
##
AM_CXXFLAGS=-Wall -Wextra -Wundef
AM_CXXFLAGS+=-Werror
AM_CXXFLAGS+=-ggdb3
AM_CXXFLAGS+=-O0
#
AM_CFLAGS=-Wall -Wextra -Wundef
AM_CFLAGS+=-Werror
AM_CFLAGS+=-ggdb3
AM_CFLAGS+=-O0
#
bin_PROGRAMS=
#
bin_PROGRAMS+=emma
emma_SOURCES=main.cpp emma.h parsefile.h parsefile.cpp utils.h utils.cpp
#
# so I remember how to do this later
# bin_PROGRAMS+=hello_world_c
# hello_world_c_SOURCES=hello_world_c.c
# hello_world_c_CFLAGS=-Wall -Wextra -Wundef
# hello_world_c_CFLAGS+=-Werror
# hello_world_c_CFLAGS+=-O0
